# BoggersTheOS-Alpha

./: Cargo.toml  README.md
crates/apps/: Cargo.toml
crates/apps/src/: lib.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: error.rs  hal_traits.rs  lib.rs  memory.rs  node.rs  process.rs  security.rs
crates/libos/: Cargo.toml
crates/libos/src/: lib.rs
crates/os/: Cargo.toml
crates/os/src/: main.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: lib.rs
docs/: CURRENT-STATUS.md  MASTER-PLAN.md  TS-HIERARCHY.md  WHAT-IT-DOES-AND-DOESNT.md
